k8s/manifests/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.11.11
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: cache
              mountPath: /cache
              subPath: cache
            - name: config
              mountPath: /config
              subPath: config
            - name: anime-tv
              mountPath: /media/anime/tv
              subPath: anime/tv
              readOnly: true
            - name: anime-movies
              mountPath: /media/anime/movies
              subPath: anime/movies
              readOnly: true
            - name: regular-tv
              mountPath: /media/regular/tv
              subPath: regular/tv
              readOnly: true
            - name: regular-movies
              mountPath: /media/regular/movies
              subPath: regular/movies
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin
        - name: anime-tv
          persistentVolumeClaim:
            claimName: media
        - name: anime-movies
          persistentVolumeClaim:
            claimName: media
        - name: regular-tv
          persistentVolumeClaim:
            claimName: media
        - name: regular-movies
          persistentVolumeClaim:
            claimName: media
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
